--- a/Clase 21 - JPA/ejercicioMesas/pom.xml
+++ b/Clase 21 - JPA/ejercicioMesas/pom.xml
@@ -9,29 +9,23 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.omar</groupId>
-    <artifactId>ClinicaOdontologica</artifactId>
+    <artifactId>ejercicioMesas</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>ClinicaOdontologica</name>
-    <description>ClinicaOdontologica</description>
+    <name>ejercicioMesas</name>
+    <description>ejercicioMesas</description>
     <properties>
         <java.version>22</java.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -47,13 +41,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency>
-
     </dependencies>
 
     <build>
@@ -70,7 +57,6 @@
                     </excludes>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 
