--- a/Proyecto Clinica Odontologica/ClinicaOdontologica/src/main/resources/static/my-frontend/package.json
+++ b/Proyecto Clinica Odontologica/ClinicaOdontologica/src/main/resources/static/my-frontend/package.json
@@ -9,12 +9,12 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp -a build/* ../ ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -35,5 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
